description meta tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="https://www.freeiconspng.com/uploads/consultancy-icon-3.png" type="image/x-icon">
-  <meta name="description" content="New ConsultingAMP HOY en INNOVEGY">
+  <meta name="description" content="Pagina modelo de innovegy para consultorias">
   <title>Inno Consulting</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="innovstyle2.css">
